# rag_automation

./: README.md  main.py  pyproject.toml
src/: config.py  targets.json  utils.py
src/crawler/: html_extractor.py  markdown_parser.py  pipeline.py  urls_extractor.py
src/output/chroma/: output.json
