[project]
name = "rag-automation"
version = "0.1.0"
description = "Automated RAG"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "requests",
    "httpx",
    "asyncio",
    "python-dotenv",
    "chromadb>=1.4.0",
    "pydantic",
    "pydantic-settings",
    "markdownify",
    "aiohttp"
]
